<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Math Operations</string>
    <string name="up_to_number">Up to number:</string>
    <string name="select_the_maximum_number">Select the maximum number</string>
    <string name="squares">SQUARES</string>
    <string name="roots">ROOTS</string>
    <string name="division">DIVISION</string>
    <string name="multiplication">MULTIPLICATION</string>
    <string name="subtraction">SUBTRACTION</string>
    <string name="addition">ADDITION</string>
    <string name="squares_button">SQUARES\n²</string>
    <string name="roots_button">ROOTS\n√</string>
    <string name="division_button">DIVISION\n÷</string>
    <string name="multiplication_button">MULTIPLICATION\n×</string>
    <string name="subtraction_button">SUBTRACTION\n-</string>
    <string name="addition_button">ADDITION\n+</string>
    <string name="square_small">Square</string>
    <string name="root_small">Root</string>
    <string name="addition_small">Addition</string>
    <string name="subtraction_small">Subtraction</string>
    <string name="multiplication_small">Multiplication</string>
    <string name="division_small">Division</string>
    <string name="addition_question" translatable="false">%1$s: %2$d + %3$d</string>
    <string name="subtraction_question" translatable="false">%1$s: %2$d - %3$d</string>
    <string name="multiplication_question" translatable="false">%1$s: %2$d × %3$d</string>
    <string name="division_question" translatable="false">%1$s: %2$d ÷ %3$d</string>
    <string name="square_question" translatable="false">%1$s: %2$d²</string>
    <string name="root_question" translatable="false">%1$s: √%2$d</string>
    <string name="score">Score:</string>
    <string name="life">Life:</string>
    <string name="time">Time:</string>
    <string name="answer">Answer:</string>
    <string name="next">NEXT</string>
    <string name="write_an_answer">Please write an answer</string>
    <string name="game_over">Game Over</string>
    <string name="score_big">SCORE</string>
    <string name="best_score_big">BEST SCORE FOR THIS DIFFICULTY</string>
    <string name="enter_a_number">Please enter a number</string>
    <string name="number_to_small">Please enter a bigger number</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="main_menu">MAIN MENU</string>
    <string name="exit">EXIT</string>
    <string name="difficulty">DIFFICULTY</string>
    <string name="enter_max_num">Enter the maximum number</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="play">Play</string>
    <string name="custom">CUSTOM</string>
    <string name="difficulty_easy">Easy (%1$d)</string>
    <string name="difficulty_medium">Medium (%1$d)</string>
    <string name="difficulty_hard">Hard (%1$d)</string>
    <string name="level_up" translatable="false">LEVEL UP!</string>
    <string name="instagram" translatable="false">Instagram</string>

    <string name="reminder">Reminder</string>
    <string name="reminder_set_to">Reminder set to %1$02d:%2$02d</string>
    <string name="reminder_off">Reminder turned off</string>
    <string name="notification_title">Time for Math!</string>
    <string name="notification_text">Don\'t forget to practice your math skills today!</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="enable_reminder">Enable daily reminder</string>

</resources>