<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleReminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reminder"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkBoxReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_reminder"
            android:textColor="@color/white"
            app:buttonTint="@color/white"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/btnSetTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminder_set_to"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/btnSaveReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>